objects/vlocity_ins__GroupCensusMemberPlan__c.object
<CustomObject>
    <description>The association of Group Census Member and a Plan. Used when census data includes details about members&apos; previous plan enrollments. Master-detail child object of Census Member.</description>
    <fields>
        <fullName>vlocity_ins__ContractLineId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>vlocity_ins__ContractLineItem__c</referenceTo>
        <relationshipLabel>Group Census Member Plans</relationshipLabel>
        <relationshipName>Group_Census_Member_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupCensusMemberId__c</fullName>
        <label>Census Member</label>
        <referenceTo>vlocity_ins__GroupCensusMember__c</referenceTo>
        <relationshipLabel>Group Census Member Plans</relationshipLabel>
        <relationshipName>GroupCensusMemberPlan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PlanProductId__c</fullName>
        <formula>CASESAFEID(vlocity_ins__ContractLineId__r.vlocity_ins__Product2Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReplacementProductId__c</fullName>
        <formula>CASESAFEID(vlocity_ins__ContractLineId__r.vlocity_ins__Product2Id__r.vlocity_ins__ReplacementProductId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Product</label>
        <type>Text</type>
    </fields>
    <label>Group Census Member Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Census Member Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Census Member Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>